--- a/README.Rmd
+++ b/README.Rmd
@@ -28,6 +28,7 @@ MacKinnon, J.G., Nielsen, M.Ø., Webb, M.D., 2024. [Jackknife inference with two
 ```{stata}
 webuse nlswork, clear
 keep if inrange(age,25,35)
+gen vismin  = inrange(race,2,3)
 reg hours vismin south i.age i.birth_yr i.year i.ind   , cluster(ind)
 ```
 
@@ -36,5 +37,6 @@ reg hours vismin south i.age i.birth_yr i.year i.ind   , cluster(ind)
 ```{stata, echo=-1}
 webuse nlswork, clear
 keep if inrange(age,25,35)
+gen vismin  = inrange(race,2,3)
 twowayjack  hours vismin south   ,  fevar(age birth_yr year ind ) cluster(age ind)
 ```
